test/regress/coverage-wave2-annotate-err4.test
; Wave 2 coverage tests for annotate.cc error paths - unclosed brace
; Covers: unclosed lot price brace (line 137)

2024/01/01 Unclosed Brace
    Assets:Test              1 FOO {$10.00
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 5:
While parsing posting:
  Assets:Test              1 FOO {$10.00
                           ^^^^^^^^^^^^^
Error: Commodity lot price lacks closing brace
end test
